<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gbl_contact_backgournd"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:background="@color/gbl_bck_color"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageviewusericon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/contact_32" />

        <Button
            android:id="@+id/buttonLogOut"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:background="@color/button_color"
            android:text="@string/logout"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textViewContactName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:text="@string/gbl_app_eff"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ToggleButton
            android:id="@+id/toggleButtonOnOff"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:textOn=""
            android:textOff=""
            android:layout_alignBottom="@+id/textViewContactName"
            android:layout_alignRight="@+id/buttonLogOut"
            android:background="@drawable/bgtoggle"
            android:text="ToggleButton" />
        
    </RelativeLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/unameEditText"
        android:background="@android:color/black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="26dp"
            android:text="@string/str_contact_list"
            android:gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/editTextAjaxSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="16dp"
            android:drawableRight="@drawable/search"
            android:ems="10"
            android:hint="@string/str_search"
            android:paddingLeft="15dp"
            android:textSize="15sp" >

            <requestFocus />
        </EditText>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ListView
            android:id="@+id/listViewcontactsettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" >

        </ListView>

    </RelativeLayout>

</LinearLayout>