<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"    
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/Background">"

        <TextView
            android:id="@+id/textViewContactName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="Choice Caller"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Text_color"
            android:textSize="40dp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="300dp"
        android:layout_height="230dp"
        android:layout_below="@+id/logo_second_relative"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:layout_marginTop="0dp"
        android:background="@color/register_backgound_color"
        android:gravity="center_horizontal" >

        <EditText
            android:id="@+id/unameEditText"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:hint="@string/nm"
            android:paddingLeft="40dp"
            android:singleLine="true"
            android:textColor="@color/text_color"
            android:textSize="15sp" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_below="@+id/unameEditText"
            android:layout_marginBottom="1dp"
            android:textColor="@color/text_color"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="1dp"
            android:background="@android:color/white"
            android:ems="10"
            android:textSize="15sp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="40dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:textColor="@color/text_color"
            android:layout_alignLeft="@+id/emailEditText"
            android:layout_alignRight="@+id/emailEditText"
            android:layout_below="@+id/emailEditText"
            android:background="@android:color/white"
            android:hint="@string/usrnm"
            android:layout_marginBottom="1dp"
            android:paddingLeft="40dp"
            android:textSize="15sp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_alignLeft="@+id/usernameEditText"
            android:layout_alignRight="@+id/usernameEditText"
            android:layout_below="@+id/usernameEditText"
            android:layout_marginBottom="1dp"
            android:background="@android:color/white"
            android:hint="@string/pwd"
            android:textSize="15sp"
            android:textColor="@color/text_color"
            android:paddingLeft="40dp"
            android:inputType="textPassword"
            android:singleLine="true" />

        <EditText
            android:id="@+id/mobileEditText"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_alignLeft="@+id/passwordEditText"
            android:layout_alignRight="@+id/passwordEditText"
            android:layout_below="@+id/passwordEditText"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/mobile"
            android:textSize="15sp"
            android:textColor="@color/text_color"
            android:inputType="number"
            android:paddingLeft="40dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/btnRegister"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/button_color"
            android:text="@string/user_register"
            android:layout_marginBottom="5dp"            
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/emailEditText"
            android:layout_alignLeft="@+id/unameEditText"
            android:layout_marginLeft="10dp"
            android:layout_alignTop="@+id/unameEditText"
            android:src="@drawable/usericon_22" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/usernameEditText"
            android:layout_alignLeft="@+id/usernameEditText"
            android:layout_alignTop="@+id/usernameEditText"
            android:src="@drawable/usericon_22" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/passwordEditText"
            android:layout_alignLeft="@+id/passwordEditText"
            android:layout_alignTop="@+id/passwordEditText"
            android:layout_marginLeft="10dp"
            android:src="@drawable/passwordicon_22" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_alignBottom="@+id/mobileEditText"
            android:layout_alignLeft="@+id/mobileEditText"
            android:layout_alignTop="@+id/mobileEditText"
            android:src="@drawable/mobile" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/usernameEditText"
            android:layout_alignLeft="@+id/imageView1"
            android:layout_alignTop="@+id/emailEditText"
            android:src="@drawable/email" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/logo_second_relative"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relativeLayout1"
        android:background="@color/relativebackgournd"
         >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/imagebackgraund"
            android:src="@drawable/circularblack" />

    </RelativeLayout>

</RelativeLayout>